--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -551,6 +551,9 @@ Section "GRASS" SecGRASS
 	FileWrite $0 'rem set dependecies path$\r$\n'
 	FileWrite $0 'set PATH=%FREETYPEBASE%;%PATH%$\r$\n'
 	FileWrite $0 '$\r$\n'
+	FileWrite $0 'rem GISRC must be set$\r$\n'
+	FileWrite $0 'set GISRC=dummy$\r$\n'
+	FileWrite $0 '$\r$\n'
 	FileWrite $0 'rem run g.mkfontcap outside a grass session$\r$\n'
 	FileWrite $0 '"%GISBASE%\bin\g.mkfontcap.exe" -o$\r$\n'
 	FileWrite $0 'exit$\r$\n'
