wingrass: select msvrt libs by default
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65460 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -964,7 +964,7 @@ Function DownloadInstallMSRuntime
 
 FunctionEnd
 
-Section /O "Important Microsoft Runtime DLLs" SecMSRuntime
+Section "Important Microsoft Runtime DLLs" SecMSRuntime
 
 	;Set the size (in KB)  of the archive file
 	StrCpy $ARCHIVE_SIZE_KB 12521
