various typo fixes, found by the Debian lintian QA tool
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@65575 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -317,8 +317,8 @@ FunctionEnd
 
 ;Function CheckInstDir
 ;	Var /GLOBAL INSTDIR_TEST
-;	Var /GLOBAL INSTDIR_LENGHT	
-;	Var /GLOBAL INSTDIR_TEST_LENGHT
+;	Var /GLOBAL INSTDIR_LENGTH	
+;	Var /GLOBAL INSTDIR_TEST_LENGTH
 ;	Var /GLOBAL MESSAGE_CHKINST_
 ;	
 ;	StrCpy $MESSAGE_CHKINST_ "WARNING: you are about to install GRASS into a directory that has spaces$\r$\n"
@@ -330,10 +330,10 @@ FunctionEnd
 ;	
 ;	${StrReplace} "$INSTDIR_TEST" " " "" "$INSTDIR"
 ;	
-;	StrLen $INSTDIR_LENGHT "$INSTDIR"
-;	StrLen $INSTDIR_TEST_LENGHT "$INSTDIR_TEST"
+;	StrLen $INSTDIR_LENGTH "$INSTDIR"
+;	StrLen $INSTDIR_TEST_LENGTH "$INSTDIR_TEST"
 ;	
-;	${If} $INSTDIR_TEST_LENGHT < $INSTDIR_LENGHT	
+;	${If} $INSTDIR_TEST_LENGTH < $INSTDIR_LENGTH	
 ;		MessageBox MB_OK|MB_ICONEXCLAMATION "$MESSAGE_CHKINST_"
 ;	${EndIf}
 ;	
