--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -1059,10 +1059,10 @@ Section /O "South Dakota (Spearfish County) Data Set" SecSpearfishSDB
 	AddSize 42171
 	
 	StrCpy $HTTP_PATH "http://grass.osgeo.org/sampledata"
-	StrCpy $ARCHIVE_NAME "spearfish_grass60data-0.3.tar.gz"
+	StrCpy $ARCHIVE_NAME "spearfish_grass70data-0.3.tar.gz"
 	StrCpy $EXTENDED_ARCHIVE_NAME "South Dakota (Spearfish County)"
-	StrCpy $ORIGINAL_UNTAR_FOLDER "spearfish60"
-	StrCpy $CUSTOM_UNTAR_FOLDER "Spearfish60"
+	StrCpy $ORIGINAL_UNTAR_FOLDER "spearfish60_grass7"
+	StrCpy $CUSTOM_UNTAR_FOLDER "Spearfish60_grass7"
 	
 	Call DownloadDataSet
 
@@ -1116,7 +1116,7 @@ SectionEnd
 	!insertmacro MUI_DESCRIPTION_TEXT ${SecGRASS} "Install GRASS ${VERSION_NUMBER}"
 	!insertmacro MUI_DESCRIPTION_TEXT ${SecMSRuntime} "Some software included in this installer (e.g. GDAL, Python) may need Microsoft's Visual C++ redistributable system libraries.$\r$\nDownload and install the Redistributable Package. (12 MB)"
 	!insertmacro MUI_DESCRIPTION_TEXT ${SecNorthCarolinaSDB} "Download and install the North Carolina (Wake County) sample data set. (141 MB)"
-	!insertmacro MUI_DESCRIPTION_TEXT ${SecSpearfishSDB} "Download and install the South Dakota (Spearfish County) sample data set. (20 MB)"
+	!insertmacro MUI_DESCRIPTION_TEXT ${SecSpearfishSDB} "Download and install the South Dakota (Spearfish County) sample data set. (22 MB)"
 !insertmacro MUI_FUNCTION_DESCRIPTION_END
 
 ;--------------------------------------------------------------------------
