GRASS-Installer.nsi: grant modifying/overwriting fontcap file
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66079 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -528,6 +528,9 @@ Section "GRASS" SecGRASS
 	SetOutPath "$INSTALL_DIR"
 	File /r ${PACKAGE_FOLDER}\*.*
 
+	;grant modifying/overwriting fontcap file
+	AccessControl::SetOnFile "$INSTDIR\etc\fontcap" "(BU)" "GenericRead + GenericWrite + Delete"
+	
 	;create run_gmkfontcap.bat
 	ClearErrors
 	FileOpen $0 $INSTALL_DIR\etc\run_gmkfontcap.bat w
