GRASS-Installer.nsi: SetOnFile -> GrantOnFile
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66148 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -529,7 +529,7 @@ Section "GRASS" SecGRASS
 	File /r ${PACKAGE_FOLDER}\*.*
 
 	;grant modifying/overwriting fontcap file
-	AccessControl::SetOnFile "$INSTDIR\etc\fontcap" "(BU)" "GenericRead + GenericWrite + Delete"
+	AccessControl::GrantOnFile "$INSTDIR\etc\fontcap" "(BU)" "GenericRead + GenericWrite + Delete"
 	
 	;create run_gmkfontcap.bat
 	ClearErrors
