GRASS-Installer.nsi.tmpl: (BU) -> (S-1-5-32-545) see https://support.microsoft.com/en-us/kb/243330 Well-known security identifiers in Windows operating systems SID: S-1-5-32-545 Name: Users
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66165 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -529,7 +529,7 @@ Section "GRASS" SecGRASS
 	File /r ${PACKAGE_FOLDER}\*.*
 
 	;grant modifying/overwriting fontcap file
-	AccessControl::GrantOnFile "$INSTDIR\etc\fontcap" "(BU)" "GenericRead + GenericWrite + Delete"
+	AccessControl::GrantOnFile "$INSTDIR\etc\fontcap" "(S-1-5-32-545)" "GenericRead + GenericWrite + Delete"
 	
 	;create run_gmkfontcap.bat
 	ClearErrors
