GRASS-Installer.nsi.tmpl: GrantOnFile => FullAccess
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66254 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -529,11 +529,11 @@ Section "GRASS" SecGRASS
 	File /r ${PACKAGE_FOLDER}\*.*
 
 	;grant $INSTDIR\etc read write accessible and show if succeeded: error if it failed
-	AccessControl::GrantOnFile "$INSTDIR\etc" "(S-1-5-32-545)" "GenericRead + GenericWrite + GenericExecute"
+	AccessControl::GrantOnFile "$INSTDIR\etc" "(S-1-5-32-545)" "FullAccess"
 	Pop $R0
 	DetailPrint $R0	
 	;grant modifying/overwriting fontcap file and show if succeeded: error if it failed	
-	AccessControl::GrantOnFile "$INSTDIR\etc\fontcap" "(S-1-5-32-545)" "GenericRead + GenericWrite + Delete + GenericExecute"
+	AccessControl::GrantOnFile "$INSTDIR\etc\fontcap" "(S-1-5-32-545)" "FullAccess"
 	Pop $R0
 	DetailPrint $R0	
 	
