--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -528,8 +528,14 @@ Section "GRASS" SecGRASS
 	SetOutPath "$INSTALL_DIR"
 	File /r ${PACKAGE_FOLDER}\*.*
 
-	;grant modifying/overwriting fontcap file
-	AccessControl::GrantOnFile "$INSTDIR\etc\fontcap" "(BU)" "GenericRead + GenericWrite + Delete"	
+	;grant $INSTDIR\etc read write accessible and show if succeeded: error if it failed
+	AccessControl::GrantOnFile "$INSTDIR\etc" "(S-1-5-32-545)" "FullAccess"
+	Pop $R0
+	DetailPrint $R0	
+	;grant modifying/overwriting fontcap file and show if succeeded: error if it failed	
+	AccessControl::GrantOnFile "$INSTDIR\etc\fontcap" "(S-1-5-32-545)" "FullAccess"
+	Pop $R0
+	DetailPrint $R0	
 	
 	;create run_gmkfontcap.bat
 	ClearErrors
@@ -579,7 +585,7 @@ Section "GRASS" SecGRASS
 	FileWrite $0 '    <security>$\r$\n'
 	FileWrite $0 '      <requestedPrivileges>$\r$\n'
 	FileWrite $0 '        <requestedExecutionLevel$\r$\n'
-	FileWrite $0 '          level="asInvoker"$\r$\n'
+	FileWrite $0 '          level="requireAdministrator"$\r$\n'
 	FileWrite $0 '          uiAccess="false"/>$\r$\n'
 	FileWrite $0 '        </requestedPrivileges>$\r$\n'
 	FileWrite $0 '       </security>$\r$\n'
@@ -590,6 +596,9 @@ Section "GRASS" SecGRASS
 	
 	;Run g.mkfontcap outside a grass session during installation to catch all fonts
 	ExecWait '"$INSTALL_DIR\etc\run_gmkfontcap.bat"'
+
+	;set $INSTDIR\etc back to read accessible
+	AccessControl::SetOnFile "$INSTDIR\etc" "(S-1-5-32-545)" "GenericRead + GenericExecute"	
 	
 	;Install demolocation into the GIS_DATABASE directory
 	SetOutPath "$GIS_DATABASE\demolocation"
