GRASS-Installer.nsi.tmpl: typo fix
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66716 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -557,7 +557,7 @@ Section "GRASS" SecGRASS
 	FileWrite $0 'rem set path to freetype dll$\r$\n'
 	FileWrite $0 'set FREETYPEBASE=$INSTALL_DIR\extrabin;$INSTALL_DIR\msys\bin;$INSTALL_DIR\lib$\r$\n'
 	FileWrite $0 '$\r$\n'
-	FileWrite $0 'rem set dependecies path$\r$\n'
+	FileWrite $0 'rem set dependencies path$\r$\n'
 	FileWrite $0 'set PATH=%FREETYPEBASE%;%PATH%$\r$\n'
 	FileWrite $0 '$\r$\n'
 	FileWrite $0 'rem GISRC must be set$\r$\n'
