--- a/mswindows/GRASS-Packager.bat.tmpl
+++ b/mswindows/GRASS-Packager.bat.tmpl
@@ -14,11 +14,11 @@ rem ----------------------------------------------------------------------------
 
 set PACKAGE_DIR=.\GRASS-@GRASS_VERSION_MAJOR@@GRASS_VERSION_MINOR@-Package
 
-set OSGEO4W_BLD_DIR=C:\OSGeo4W
-if exist C:\OSGeo4W_grass@GRASS_VERSION_MAJOR@ (
-set OSGEO4W_PKG_DIR=C:\OSGeo4W_grass@GRASS_VERSION_MAJOR@
+set OSGEO4W_BLD_DIR=C:\OSGeo4W%1
+if exist C:\OSGeo4W%1_grass@GRASS_VERSION_MAJOR@ (
+set OSGEO4W_PKG_DIR=C:\OSGeo4W%1_grass@GRASS_VERSION_MAJOR@
 ) else (
-set OSGEO4W_PKG_DIR=C:\OSGeo4W
+set OSGEO4W_PKG_DIR=C:\OSGeo4W%1
 )
 
 set GRASS_PREFIX=%OSGEO4W_BLD_DIR%\apps\grass\grass-@GRASS_VERSION_MAJOR@.@GRASS_VERSION_MINOR@.@GRASS_VERSION_RELEASE@
@@ -68,7 +68,7 @@ copy %OSGEO4W_BLD_DIR%\usr\src\grass_trunk\mswindows\external\rbatch\* %PACKAGE_
 @echo -----------------------------------------------------------------------------------------------------------------------
 @echo.
 
-mkdir %PACKAGE_DIR%\share
+if not exist "%PACKAGE_DIR%\share" mkdir %PACKAGE_DIR%\share
 mkdir %PACKAGE_DIR%\share\proj
 xcopy %OSGEO4W_PKG_DIR%\share\proj %PACKAGE_DIR%\share\proj /S/V/F/I
 
@@ -89,23 +89,6 @@ xcopy %OSGEO4W_PKG_DIR%\share\gdal %PACKAGE_DIR%\share\gdal /S/V/F/I
 
 mkdir %PACKAGE_DIR%\share\epsg_csv
 xcopy %OSGEO4W_PKG_DIR%\share\epsg_csv %PACKAGE_DIR%\share\epsg_csv /S/V/F/I
-
-@echo.
-@echo -----------------------------------------------------------------------------------------------------------------------
-@echo Copy MSYS files to PACKAGE_DIR\msys
-@echo -----------------------------------------------------------------------------------------------------------------------
-@echo.
-
-mkdir %PACKAGE_DIR%\msys
-
-xcopy %OSGEO4W_PKG_DIR%\apps\msys\* %PACKAGE_DIR%\msys /S/V/F/I
-
-rem delete msys.bat and fstab from osgeo4w because there is an
-rem adaption (for spaces in installation path) written by
-rem GRASS-Installer.nsi
-
-del %PACKAGE_DIR%\msys\msys.bat
-del %PACKAGE_DIR%\msys\etc\fstab
 
 @echo.
 @echo -----------------------------------------------------------------------------------------------------------------------
