--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -36,9 +36,12 @@ SetCompressorDictSize 128
         !define GRASS_COMMAND "grass@GRASS_VERSION_MAJOR@@GRASS_VERSION_MINOR@svn"
 !endif
 
-; Platform and GRASS Icon
-!if "%1" == "64"
-    !define PLATFORM   "x86_64"
+;----------------------------------------------------------------------------------------------------------------------------
+
+;Platform (and GRASS Icon)
+
+!if "@ARCH@" == "x86_64-w64-mingw32"
+    !define PLATFORM "x86_64"
     !define GRASS_ICON "${INSTALL_DIR}\gui\icons\grass64bit.ico"
 !else
     !define PLATFORM "x86"
