wingrass installer: fix platform definition
git-svn-id: https://svn.osgeo.org/grass/grass/branches/releasebranch_7_0@67134 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -36,8 +36,11 @@ SetCompressorDictSize 128
         !define GRASS_COMMAND "grass@GRASS_VERSION_MAJOR@@GRASS_VERSION_MINOR@svn"
 !endif
 
-; Platform
-!if "%1" == "64"
+;----------------------------------------------------------------------------------------------------------------------------
+
+;Platform
+
+!if "@ARCH@" == "x86_64-w64-mingw32"
     !define PLATFORM "x86_64"
 !else
     !define PLATFORM "x86"
