--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -851,7 +851,11 @@ Section "Important Microsoft Runtime DLLs" SecMSRuntime
 	AddSize 13500
 	
 	StrCpy $HTTP_PATH "http://download.osgeo.org/osgeo4w/${PLATFORM}/release/msvcrt/"
-	StrCpy $ARCHIVE_NAME "msvcrt-1.0.1-12.tar.bz2"
+        !if ${PLATFORM} == "x86_64"
+            StrCpy $ARCHIVE_NAME "msvcrt-1.0.1-8.tar.bz2"
+        !else
+            StrCpy $ARCHIVE_NAME "msvcrt-1.0.1-12.tar.bz2"
+        !endif
 	StrCpy $EXTENDED_ARCHIVE_NAME "Microsoft Visual C++ Redistributable Packages"
 	StrCpy $ORIGINAL_UNTAR_FOLDER "install_msruntime"
 	
