wingrass: various fixes (32/64bit)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@67148 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/mswindows/GRASS-Packager.bat.tmpl
+++ b/mswindows/GRASS-Packager.bat.tmpl
@@ -68,6 +68,8 @@ copy %MSYS_BLD_DIR%\bin\libbz2-1.dll %PACKAGE_DIR%\extrabin
 copy %MSYS_BLD_DIR%\bin\libharfbuzz-0.dll %PACKAGE_DIR%\extrabin
 copy %MSYS_BLD_DIR%\bin\libglib-2.0-0.dll %PACKAGE_DIR%\extrabin
 copy %MSYS_BLD_DIR%\bin\libpng16-16.dll %PACKAGE_DIR%\extrabin
+copy %MSYS_BLD_DIR%\bin\libsystre-0.dll %PACKAGE_DIR%\extrabin
+copy %MSYS_BLD_DIR%\bin\libtre-5.dll %PACKAGE_DIR%\extrabin
 if exist "%MSYS_BLD_DIR%\bin\libgcc_s_seh-1.dll" copy %MSYS_BLD_DIR%\bin\libgcc_s_seh-1.dll %PACKAGE_DIR%\extrabin
 if exist "%MSYS_BLD_DIR%\bin\libgcc_s_dw2-1.dll" copy %MSYS_BLD_DIR%\bin\libgcc_s_dw2-1.dll %PACKAGE_DIR%\extrabin
 
