--- a/mswindows/GRASS-Installer.nsi.tmpl
+++ b/mswindows/GRASS-Installer.nsi.tmpl
@@ -44,11 +44,9 @@ SetCompressorDictSize 128
 
 !if "@ARCH@" == "x86_64-w64-mingw32"
     !define PLATFORM   "x86_64"
-    !define GRASS_ICON "grass64bit.ico"
     InstallDir "$PROGRAMFILES64\${GRASS_BASE}"
 !else
     !define PLATFORM   "x86"
-    !define GRASS_ICON "grass.ico"
     InstallDir "$PROGRAMFILES32\${GRASS_BASE}"
 !endif
 
@@ -620,7 +618,7 @@ Section "GRASS" SecGRASS
 	;Registry Key Entries
 	
 	;HKEY_LOCAL_MACHINE Install entries
-	;Set the Name, Version and Revision of GRASS + PublisherInfo + InstallPath	
+	;Set the Name, Version and Revision of GRASS + PublisherInfo + InstallPath
 	WriteRegStr HKLM "Software\${GRASS_BASE}" "Name" "${GRASS_BASE} (${PLATFORM})"
 	WriteRegStr HKLM "Software\${GRASS_BASE}" "VersionNumber" "${VERSION_NUMBER}"
 	WriteRegStr HKLM "Software\${GRASS_BASE}" "SvnRevision" "${SVN_REVISION}"
@@ -641,7 +639,7 @@ Section "GRASS" SecGRASS
 		"DisplayVersion" "${VERSION_NUMBER}-r${SVN_REVISION}-${BINARY_REVISION}"
 	!endif
 	
-	WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\${GRASS_BASE}" "DisplayIcon" "$INSTALL_DIR\gui\icons\${GRASS_ICON}"
+	WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\${GRASS_BASE}" "DisplayIcon" "$INSTALL_DIR\gui\icons\grass.ico"
 	WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\${GRASS_BASE}" "EstimatedSize" 1
 	WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\${GRASS_BASE}" "HelpLink" "${WIKI_PAGE}"
 	WriteRegStr HKLM "Software\Microsoft\Windows\CurrentVersion\Uninstall\${GRASS_BASE}" "URLInfoAbout" "${WEB_SITE}"
@@ -652,7 +650,7 @@ Section "GRASS" SecGRASS
 	SetShellVarContext current
 	
 	CreateShortCut "$DESKTOP\${GRASS_BASE}.lnk" "$INSTALL_DIR\${GRASS_COMMAND}.bat" "-gui"\
-	"$INSTALL_DIR\gui\icons\${GRASS_ICON}" "" SW_SHOWNORMAL "" "Launch GRASS GIS ${VERSION_NUMBER}"
+	"$INSTALL_DIR\gui\icons\grass.ico" "" SW_SHOWNORMAL "" "Launch GRASS GIS ${VERSION_NUMBER}"
 	
 	;Create the Windows Start Menu Shortcuts
 	SetShellVarContext all
@@ -660,7 +658,7 @@ Section "GRASS" SecGRASS
 	CreateDirectory "$SMPROGRAMS\${GRASS_BASE}"
 	
 	CreateShortCut "$SMPROGRAMS\${GRASS_BASE}\${GRASS_BASE}.lnk" "$INSTALL_DIR\${GRASS_COMMAND}.bat" "-gui"\
-	"$INSTALL_DIR\gui\icons\${GRASS_ICON}" "" SW_SHOWNORMAL "" "Launch GRASS GIS ${VERSION_NUMBER}"
+	"$INSTALL_DIR\gui\icons\grass.ico" "" SW_SHOWNORMAL "" "Launch GRASS GIS ${VERSION_NUMBER}"
 	
 	CreateShortCut "$SMPROGRAMS\${GRASS_BASE}\Uninstall ${GRASS_BASE}.lnk" "$INSTALL_DIR\Uninstall-GRASS.exe" ""\
 	"$INSTALL_DIR\Uninstall-GRASS.exe" "" SW_SHOWNORMAL "" "Uninstall GRASS GIS ${VERSION_NUMBER}"
