--- a/mswindows/GRASS-Packager.bat.tmpl
+++ b/mswindows/GRASS-Packager.bat.tmpl
@@ -62,7 +62,7 @@ del %PACKAGE_DIR%\extrabin\msvcr*
 @echo -----------------------------------------------------------------------------------------------------------------------
 @echo.
 
-copy %OSGEO4W_BLD_DIR%\usr\src\grass_trunk\mswindows\external\rbatch\* %PACKAGE_DIR%\extrabin
+copy .\external\rbatch\* %PACKAGE_DIR%\extrabin
 
 @echo.
 @echo -----------------------------------------------------------------------------------------------------------------------
