--- a/mswindows/osgeo4w/setup.hint.tmpl
+++ b/mswindows/osgeo4w/setup.hint.tmpl
@@ -3,5 +3,5 @@ ldesc: "Geographic Resources Analysis Support System (GRASS GIS) - daily builds 
 category: Desktop
 requires: liblas avce00 gpsbabel gs gdal-python matplotlib msvcrt iconv libtiff gdal proj freetype-mingw pdcurses zlib fftw libpng wxpython python-numpy python-pil pyopengl cairo psycopg2
 maintainer: MartinLanda
-curr: 7.1.svn-1
-prev: 7.1.svn-1
+curr: @GRASS_VERSION_NUMBER@-1
+prev: @GRASS_VERSION_NUMBER@-1
